--- a/articles/cognitive-services/Speech-Service/toc.yml
+++ b/articles/cognitive-services/Speech-Service/toc.yml
@@ -520,6 +520,8 @@
         - name: Speech コンテナーを構成する
           displayName: 'containers,configure containers,container config,configuration'
           href: speech-container-configuration.md
+        - name: 音声コンテナーを使用したバッチ処理
+          href: speech-container-batch-processing.md
         - name: Speech コンテナーと Kubernetes および Helm
           displayName: 'containers,kubernetes,k8s,helm,orchestration,on-prem,on-premises'
           href: speech-container-howto-on-premises.md
