--- a/articles/compliance/index.yml
+++ b/articles/compliance/index.yml
@@ -13,13 +13,13 @@ metadata:
   author: TerryLanfear
   ms.author: terrylan
   manager: rkarlin
-  ms.date: 05/06/2020
-  ms.openlocfilehash: f3016c224e1c4177766e611c3b0f15ab464936e5
-  ms.sourcegitcommit: c4ad4ba9c9aaed81dfab9ca2cc744930abd91298
+  ms.date: 07/07/2020
+  ms.openlocfilehash: f36190edbdbfe4840f9f03d612d6fe2353ad5f5b
+  ms.sourcegitcommit: e995f770a0182a93c4e664e60c025e5ba66d6a45
   ms.translationtype: HT
   ms.contentlocale: ja-JP
-  ms.lasthandoff: 06/12/2020
-  ms.locfileid: "84737225"
+  ms.lasthandoff: 07/08/2020
+  ms.locfileid: "86134075"
 conceptualContent:
   title: コンプライアンス認証
   items:
@@ -242,7 +242,7 @@ conceptualContent:
     - url: https://docs.microsoft.com/microsoft-365/compliance/offering-ccpa
       itemType: concept
       text: CCPA (米国カリフォルニア)
-    - url: https://docs.microsoft.com/microsoft-365/compliance/offering-ccsl-irap-australia
+    - url: https://azure.microsoft.com/resources/microsoft-azure-compliance-and-australian-security-and-privacy-requirements/
       itemType: concept
       text: IRAP と CCSL (オーストラリア)
     - url: https://docs.microsoft.com/microsoft-365/compliance/offering-cs-mark-gold-japan
@@ -283,11 +283,11 @@ conceptualContent:
     - url: https://docs.microsoft.com/microsoft-365/compliance/offering-g-cloud-uk
       itemType: concept
       text: G-Cloud (英国)
-  - title: 地域
-    links:
     - url: https://docs.microsoft.com/microsoft-365/compliance/offering-isms-korea
       itemType: concept
       text: ISMS (韓国)
+  - title: 地域
+    links:
     - url: https://docs.microsoft.com/microsoft-365/compliance/offering-it-grundschutz-workbook-germany
       itemType: concept
       text: IT-Grundschutz (ドイツ)
@@ -297,13 +297,13 @@ conceptualContent:
     - url: https://docs.microsoft.com/microsoft-365/compliance/offering-meity-india
       itemType: concept
       text: MeitY (インド)
-    - url: https://docs.microsoft.com/microsoft-365/compliance/offering-mtcs-singapore
+    - url: https://azure.microsoft.com/resources/microsoft-azure-compliance-in-the-context-of-singapore/
       itemType: concept
       text: MTCS (シンガポール)
     - url: https://docs.microsoft.com/microsoft-365/compliance/offering-my-number-act-japan
       itemType: concept
       text: マイ ナンバー (日本)
-    - url: https://docs.microsoft.com/microsoft-365/compliance/offering-nz-cc-framework-nz
+    - url: https://azure.microsoft.com/resources/microsoft-azure-compliance-in-the-context-of-new-zealand/
       itemType: concept
       text: NZ CC (ニュージーランド)
     - url: https://docs.microsoft.com/microsoft-365/compliance/offering-pasf-uk
@@ -394,63 +394,59 @@ additionalContent:
       links:
       - text: BIR-2012 ベースライン カバレッジ ユーザー ガイド
         url: https://servicetrust.microsoft.com/ViewPage/TrustDocuments?command=Download&downloadType=Document&downloadId=f49ee594-6c56-4b6f-93c1-646850798354&docTab=6d000410-c9e9-11e7-9a91-892aae8839ad_Compliance_Guides
-      - text: CDSA 準拠コンテンツの保護
-        url: https://gallery.technet.microsoft.com/Azure-Implementing-CDSA-8087c7a2
       - text: CIS Azure の基礎
         url: https://azure.microsoft.com/mediahandler/files/resourcefiles/cis-microsoft-azure-foundations-security-benchmark/CIS_Microsoft_Azure_Foundations_Benchmark_v1.0.0.pdf
       - text: CJIS クラウド コンピューティング マッピング
         url: https://servicetrust.microsoft.com/ViewPage/MSComplianceGuide?command=Download&downloadType=Document&downloadId=f33bf55e-1f0e-41e4-a442-7182365833a0&docTab=4ce99610-c9c0-11e7-8c2c-f908a777fa4d_GRC_Assessment_Reports
       - text: CSA CAIQ
-        url: https://servicetrust.microsoft.com/ViewPage/TrustDocuments?command=Download&downloadType=Document&downloadId=a966a424-ecfd-4de2-9739-b08aee2d3ca0&docTab=6d000410-c9e9-11e7-9a91-892aae8839ad_Compliance_Guides
-      - text: FCA Microsoft のクラウド ガイダンスへのアプローチ
-        url: https://servicetrust.microsoft.com/ViewPage/TrustDocuments?command=Download&downloadType=Document&downloadId=991d2ba5-da00-48ed-a95e-a16f61db384c&docTab=6d000410-c9e9-11e7-9a91-892aae8839ad_Compliance_Guides
+        url: https://azure.microsoft.com/resources/microsoft-azure-responses-to-cloud-security-alliance-consensus-assessments-initiative-questionnaire-v301/
       - text: FERPA 実装ガイド
-        url: https://gallery.technet.microsoft.com/Azure-FERPA-Implementation-441b6b71
+        url: https://azure.microsoft.com/resources/microsoft-azure-ferpa-implementation-guide/
       - text: GDPR コントロール マッピング
         url: https://servicetrust.microsoft.com/ViewPage/TrustDocumentsV3?command=Download&downloadType=Document&downloadId=62d400be-b281-48a2-b40a-eb1a89e087cf&tab=7f51cb60-3d6c-11e9-b2af-7bb9f5d2d913&docTab=7f51cb60-3d6c-11e9-b2af-7bb9f5d2d913_AuditedControls
       - text: GxP ガイドライン
-        url: https://gallery.technet.microsoft.com/Azure-GxP-Guidelines-ab1b98d9
-      - text: HIPAA/HITECH Act の実装
-        url: https://gallery.technet.microsoft.com/Azure-HIPAAHITECH-Act-1d27efb0
-    - title: 実装とマッピング
-      links:
+        url: https://azure.microsoft.com/resources/microsoft-azure-gxp-guidelines-april/
       - text: HITRUST のお客様の責任マトリックス
         url: https://servicetrust.microsoft.com/ViewPage/Blueprint?command=Download&downloadType=Document&downloadId=3ccde498-4761-4be0-be8b-cd8d379a3a4f&docTab=fc060920-cdb8-11e7-bacf-0bf52b09d912_Healthcare_Blueprint
+    - title: 実装とマッピング
+      links:
       - text: ISO 27001 セキュリティ コントロール
-        url: https://gallery.technet.microsoft.com/13-Effective-Security-72447e11
+        url: https://azure.microsoft.com/resources/13-effective-security-controls-for-iso-27001-compliance-when-using-microsoft-azure/
       - text: IT-Grundschutz ブック
-        url: https://servicetrust.microsoft.com/ViewPage/MSComplianceGuide?command=Download&downloadType=Document&downloadId=2b6fa69b-4cab-4f15-8e7b-560e0291e7f7&docTab=4ce99610-c9c0-11e7-8c2c-f908a777fa4d_GRC_Assessment_Reports
+        url: https://azure.microsoft.com/resources/it-grundschutz-konformitt-mit-azure/
       - text: NEN7510-2011 標準カバレッジ ガイド
         url: https://servicetrust.microsoft.com/ViewPage/TrustDocuments?command=Download&downloadType=Document&downloadId=3285c45c-921c-49ad-b881-be43e0b70490&docTab=6d000410-c9e9-11e7-9a91-892aae8839ad_Compliance_Guides
       - text: NERC CIP 標準
-        url: https://servicetrust.microsoft.com/ViewPage/TrustDocuments?command=Download&downloadType=Document&downloadId=f5362bc0-0594-4fd2-a4a9-9b74b6a33c20&docTab=6d000410-c9e9-11e7-9a91-892aae8839ad_FAQ_and_White_Papers
+        url: https://azure.microsoft.com/resources/microsoft-azure-nerc-cip-standards-and-cloud-computing/
       - text: NZ GCIO クラウド コンピューティングに関する考慮事項
-        url: https://gallery.technet.microsoft.com/Response-to-GCIO-Cloud-e117bbb9
+        url: https://azure.microsoft.com/resources/microsoft-azure-response-to-nz-gcio-cloud-computing-information-security-privacy-considerations
       - text: PCI DSS 3.2.1 責任マトリックス
         url: https://gallery.technet.microsoft.com/Azure-PCI-DSS-Responsibilit-02d4b4b2
+      - text: SCI ガイダンス
+        url: https://azure.microsoft.com/resources/microsoft-azure-regulation-systems-compliance-and-integrity-sci-cloud-implementation-guide/
       - text: SOX ガイダンス
-        url: https://servicetrust.microsoft.com/ViewPage/TrustDocuments?command=Download&downloadType=Document&downloadId=447ddef4-e55d-41f8-b233-328934efb461&docTab=6d000410-c9e9-11e7-9a91-892aae8839ad_Compliance%20Guides
+        url: https://azure.microsoft.com/resources/microsoft-azure-guidance-for-sarbanes-oxley-sox/
       - text: UK OFFICIAL クラウド セキュリティ コントロール
-        url: https://gallery.technet.microsoft.com/14-Cloud-Security-Controls-670292c1
+        url: https://azure.microsoft.com/resources/14-cloud-security-controls-for-uk-cloud-using-microsoft-azure
     - title: ホワイト ペーパーとアナリスト レポート
       links:
       - text: Azure コンプライアンスの概要
         url: https://servicetrust.microsoft.com/ViewPage/MSComplianceGuideV3?command=Download&downloadType=Document&downloadId=44bbae63-bf4d-4e3b-9d3d-c96fb25ec363&tab=7027ead0-3d6b-11e9-b9e1-290b1eb4cdeb&docTab=7027ead0-3d6b-11e9-b9e1-290b1eb4cdeb_FAQ_and_White_Papers
-      - text: Azure のセキュリティ、プライバシー、およびコンプライアンス
-        url: https://gallery.technet.microsoft.com/Response-to-GCIO-Cloud-e117bbb9
+      - text: データ所在地とデータ保護を有効にする
+        url: https://azure.microsoft.com/resources/achieving-compliant-data-residency-and-security-with-azure/
       - text: データ所在地とセキュリティ
-        url: https://gallery.technet.microsoft.com/Azure-for-Secure-Worlwide-19b91d44
+        url: https://azure.microsoft.com/resources/azure-for-secure-worldwide-public-sector-cloud-adoption
       - text: セキュリティとコンプライアンスでの Azure RFI
-        url: https://gallery.technet.microsoft.com/Azure-Standard-Response-to-5de19cb6
+        url: https://azure.microsoft.com/resources/azure-standard-response-to-rfi-on-security-privacy-and-compliance/
       - text: Azure モノのインターネットのコンプライアンス
-        url: https://gallery.technet.microsoft.com/Azure-and-Data-Compliance-bda1f632
+        url: https://azure.microsoft.com/resources/microsoft-azure-and-data-compliance-in-the-internet-of-things-iot-context/
       - text: IDC - Azure による規制に関する課題の管理
         url: https://azure.microsoft.com/resources/azure-is-helping-organizations-manage-regulatory-challenges/
       - text: Azure リスク コンプライアンス ガイド
-        url: https://servicetrust.microsoft.com/ViewPage/TrustDocuments?command=Download&downloadType=Document&downloadId=edee9b14-3661-4a16-ba83-c35caf672bd7&docTab=6d000410-c9e9-11e7-9a91-892aae8839ad_FAQ_and_White_Papers
+        url: https://azure.microsoft.com/resources/risk-assessment-and-compliance-guide-for-financial-institutions-in-the-microsoft-cloud-/
       - text: クラウド コンピューティングについての責任共有
-        url: https://gallery.technet.microsoft.com/Shared-Responsibilities-81d0ff91
-      - text: 政府のクラウド アシュアランス ガイド
-        url: https://servicetrust.microsoft.com/ViewPage/TrustDocuments?command=Download&downloadType=Document&downloadId=c24c11f2-2cd4-444a-9160-19762855ad3a&docTab=6d000410-c9e9-11e7-9a91-892aae8839ad_FAQ_and_White_Papers
+        url: https://azure.microsoft.com/resources/shared-responsibilities-for-cloud-computing/
       - text: Azure エクスポート コントロール
-        url: https://servicetrust.microsoft.com/ViewPage/TrustDocuments?command=Download&downloadType=Document&downloadId=c24c11f2-2cd4-444a-9160-19762855ad3a&docTab=6d000410-c9e9-11e7-9a91-892aae8839ad_FAQ_and_White_Papers
+        url: https://azure.microsoft.com/resources/microsoft-azure-cloud-services-us-uk-and-eu-export-controls/
+      - text: Azure でコンプライアンスの世界を実現
+        url: https://azure.microsoft.com/resources/azure-enables-a-world-of-compliance/
