--- a/articles/service-bus-messaging/TOC.yml
+++ b/articles/service-bus-messaging/TOC.yml
@@ -182,6 +182,10 @@
           href: service-bus-nodejs-how-to-use-queues.md
         - name: メッセージの発行とサブスクライブ (レガシ azure-sb)
           href: service-bus-nodejs-how-to-use-topics-subscriptions.md
+    - name: 移行
+      items:
+        - name: ActiveMQ から Azure Service Bus への移行
+          href: migrate-jms-activemq-to-servicebus.md
     - name: 統合
       items:
         - name: RabbitMQ との統合
