--- a/articles/load-balancer/TOC.yml
+++ b/articles/load-balancer/TOC.yml
@@ -4,6 +4,8 @@
   items:
     - name: Azure Load Balancer の概要
       href: load-balancer-overview.md
+    - name: 新機能
+      href: whats-new.md
     - name: よく寄せられる質問
       href: load-balancer-faqs.md
 - name: クイック スタート
