--- a/articles/azure-vmware/toc.yml
+++ b/articles/azure-vmware/toc.yml
@@ -26,6 +26,8 @@
       href: concepts-storage.md
     - name: プライベート クラウドのアクセスと ID
       href: concepts-identity.md
+    - name: ロールベースのアクセス制御
+      href: concepts-rbac.md
     - name: プライベート クラウドのアップグレード
       href: concepts-upgrades.md
 - name: 操作方法ガイド
@@ -36,27 +38,15 @@
       href: manage-dhcp.md
     - name: 障害復旧
       href: disaster-recovery.md
-    - name: コンテンツ ライブラリを介して VM をデプロイする
-      href: deploy-vm-content-library.md
     - name: AVS 向けの Azure Backup Server
       items:
         - name: AVS 向けに Azure Backup Server を設定する
           href: set-up-mabs-for-avs.md
         - name: Azure Backup Server を使用して AVS VM をバックアップする
           href: backup-avs-vms-with-mabs.md
-    - name: Azure のネイティブ統合
-      items:
-        - name: API Management
-          href: concepts-api-management.md
-        - name: ハブ アンド スポーク
-          href: concepts-avs-hub-and-spoke-integration.md
 - name: リファレンス
   items: null
 - name: リソース
   items:
-    - name: トラブルシューティング
-      items:
-        - name: AVS のデプロイまたはプロビジョニングのエラーに関するヘルプを表示する
-          href: fix-deployment-provisioning-failures.md
     - name: よく寄せられる質問
       href: faq.md
