--- a/articles/cognitive-services/index.yml
+++ b/articles/cognitive-services/index.yml
@@ -11,17 +11,20 @@ metadata:
   ms.author: nitinme
   manager: nitinme
   ms.date: 03/24/2020
-  ms.openlocfilehash: dae82c058d5d4e3b2f4c9003c2642456fa71b215
-  ms.sourcegitcommit: 6fd28c1e5cf6872fb28691c7dd307a5e4bc71228
+  ms.openlocfilehash: 18c854389122c7e05a84ea0fd42b0cd2fd0c4c1c
+  ms.sourcegitcommit: f844603f2f7900a64291c2253f79b6d65fcbbb0c
   ms.translationtype: HT
   ms.contentlocale: ja-JP
-  ms.lasthandoff: 06/23/2020
-  ms.locfileid: "85211204"
+  ms.lasthandoff: 07/10/2020
+  ms.locfileid: "86224368"
 highlightedContent:
   items:
   - title: Cognitive Services とは
     itemType: overview
     url: ./welcome.md
+  - title: ドキュメントの最新情報
+    itemType: whats-new
+    url: whats-new-docs.md
   - title: Cognitive Services と機械学習
     itemType: concept
     url: ./cognitive-services-and-machine-learning.md
@@ -37,9 +40,6 @@ highlightedContent:
   - title: Cognitive Services の仮想ネットワーク
     itemType: architecture
     url: cognitive-services-virtual-networks.md
-  - title: Cognitive Services のカスタム サブドメイン
-    itemType: how-to-guide
-    url: cognitive-services-custom-subdomains.md
   - title: Cognitive Services のセキュリティ
     itemType: concept
     url: cognitive-services-security.md
