--- a/articles/azure-vmware/toc.yml
+++ b/articles/azure-vmware/toc.yml
@@ -44,9 +44,19 @@
           href: set-up-mabs-for-avs.md
         - name: Azure Backup Server を使用して AVS VM をバックアップする
           href: backup-avs-vms-with-mabs.md
+    - name: Azure のネイティブ統合
+      items:
+        - name: API Management
+          href: concepts-api-management.md
+        - name: ハブ アンド スポーク
+          href: concepts-avs-hub-and-spoke-integration.md
 - name: リファレンス
   items: null
 - name: リソース
   items:
+    - name: トラブルシューティング
+      items:
+        - name: AVS のデプロイまたはプロビジョニングのエラーに関するヘルプを表示する
+          href: fix-deployment-provisioning-failures.md
     - name: よく寄せられる質問
       href: faq.md
