commit translated contents

--- a/articles/container-service/kubernetes/TOC.yml
+++ b/articles/container-service/kubernetes/TOC.yml
@@ -8,7 +8,7 @@
 - name: 操作方法ガイド
   items:
     - name: Azure Files によるデータ保持
-      href: ../../aks/azure-files.md?toc=%2fazure%2fcontainer-service%2fkubernetes%2ftoc.json
+      href: ../../aks/azure-files-dynamic-pv.md?toc=/azure/container-service/kubernetes/toc.json
     - name: モニター
     - name: Spring Boot アプリのデプロイ
       items:
