--- a/articles/container-service/index.yml
+++ b/articles/container-service/index.yml
@@ -22,15 +22,15 @@ sections:
         className: cardsFTitle
         items:
           - title: Kubernetes クラスターの概要
-            href: /azure/container-service/kubernetes
+            href: ./kubernetes/index.yml
             image:
               src: media/index/get-started.svg
-              href: /azure/container-service/kubernetes
+              href: ./kubernetes/index.yml
           - title: DC/OS および Docker Swarm クラスターの概要
-            href: /azure/container-service/dcos-swarm
+            href: ./dcos-swarm/index.yml
             image:
               src: media/index/get-started.svg
-              href: /azure/container-service/dcos-swarm
+              href: ./dcos-swarm/index.yml
   - title: Microsoft Learn でスキルを身に付ける
     items:
       - type: list
