--- a/articles/active-directory/devices/TOC.yml
+++ b/articles/active-directory/devices/TOC.yml
@@ -79,6 +79,10 @@
       href: enterprise-state-roaming-group-policy-settings.md
     - name: Enterprise State Roaming Windows の設定
       href: enterprise-state-roaming-windows-settings-reference.md
+    - name: Graph API
+      items:
+        - name: デバイス ID API
+          href: /graph/api/resources/device?view=graph-rest-1.0
 - name: リソース
   items:
     - name: Azure フィードバック フォーラム
