--- a/articles/databox/TOC.yml
+++ b/articles/databox/TOC.yml
@@ -14,30 +14,52 @@
               href: data-box-quickstart-portal.md
         - name: チュートリアル
           items:
-            - name: 1 - 注文
-              href: data-box-deploy-ordered.md
-            - name: 2 - 設定
-              href: data-box-deploy-set-up.md
-            - name: 3 - 接続とコピー
+            - name: Azure へのデータ インポート
               items:
-                - name: SMB 経由
-                  href: data-box-deploy-copy-data.md
-                - name: NFS 経由
-                  href: data-box-deploy-copy-data-via-nfs.md
-                - name: REST 経由
-                  href: data-box-deploy-copy-data-via-rest.md
-                - name: データ コピー サービス経由
-                  href: data-box-deploy-copy-data-via-copy-service.md
-                - name: マネージド ディスクへ
-                  href: data-box-deploy-copy-data-from-vhds.md
-            - name: 4 - 返却、アップロード、確認
-              href: data-box-deploy-picked-up.md
+                - name: 1 - 注文
+                  href: data-box-deploy-ordered.md
+                - name: 2 - 設定
+                  href: data-box-deploy-set-up.md
+                - name: 3 - 接続とコピー
+                  items:
+                    - name: SMB 経由
+                      href: data-box-deploy-copy-data.md
+                    - name: NFS 経由
+                      href: data-box-deploy-copy-data-via-nfs.md
+                    - name: REST 経由
+                      href: data-box-deploy-copy-data-via-rest.md
+                    - name: データ コピー サービス経由
+                      href: data-box-deploy-copy-data-via-copy-service.md
+                    - name: マネージド ディスクへ
+                      href: data-box-deploy-copy-data-from-vhds.md
+                - name: 4 - 返却、アップロード、確認
+                  href: data-box-deploy-picked-up.md
+            - name: Azure からデータをエクスポートする
+              items:
+                - name: 1 - 注文
+                  href: data-box-deploy-export-ordered.md
+                - name: 2 - 設定
+                  href: data-box-deploy-set-up.md
+                - name: 3 - 接続とコピー
+                  items:
+                    - name: SMB 経由
+                      href: data-box-deploy-export-copy-data.md
+                    - name: NFS 経由
+                      href: data-box-deploy-export-copy-data-via-nfs.md
+                - name: 4 - 返却
+                  href: data-box-deploy-export-picked-up.md
         - name: 概念
           items:
             - name: 安全性のガイドラインを読む
               href: data-box-safety.md
             - name: 追跡とログ記録を確認する
-              href: data-box-logs.md
+              items:
+                - name: インポート順序の場合
+                  href: data-box-logs.md
+                - name: エクスポート順序の場合
+                  href: data-box-export-logs.md
+            - name: 監査ログの表示
+              href: data-box-audit-logs.md
             - name: 要件を確認する
               items:
                 - name: Data Box の場合
@@ -46,7 +68,7 @@
                   href: data-box-system-requirements-rest.md
             - name: 制限を理解する
               href: data-box-limits.md
-            - name: Security
+            - name: セキュリティ
               items:
                 - name: セキュリティ ベースライン
                   href: security-baseline.md
@@ -64,6 +86,8 @@
               href: data-box-portal-customer-managed-shipping.md
             - name: カスタマー マネージド キーの有効化
               href: data-box-customer-managed-encryption-key-portal.md
+            - name: カスタマー ロックボックスを使用する
+              href: data-box-customer-lockbox.md
             - name: データを BLOB 層に移動する
               href: data-box-how-to-set-data-tier.md
             - name: デバイスをケーブル接続する
