--- a/articles/firewall-manager/toc.yml
+++ b/articles/firewall-manager/toc.yml
@@ -44,12 +44,14 @@
       href: migrate-to-policy.md
     - name: DNS の設定
       href: dns-settings.md
+    - name: 複数のパブリック IP のデプロイ
+      href: multiple-public-ip-powershell.md
 - name: リファレンス
   items:
     - name: Azure CLI
-      href: /cli/azure/ext/azure-firewall/network/firewall
+      href: /cli/azure/ext/azure-firewall/network/firewall/policy
     - name: Azure PowerShell
-      href: /powershell/module/az.network/new-azfirewall
+      href: /powershell/module/az.network/new-azfirewallpolicy
     - name: .NET
       href: /dotnet/api
     - name: Java
@@ -59,7 +61,7 @@
     - name: Python
       href: 'https://azure.microsoft.com/develop/python/'
     - name: REST
-      href: /rest/api/firewall
+      href: /rest/api/virtualnetwork/firewallpolicies
     - name: Azure Resource Manager
       href: ../azure-resource-manager/management/overview.md
 - name: リソース
