--- a/articles/storage/blobs/TOC.yml
+++ b/articles/storage/blobs/TOC.yml
@@ -118,7 +118,7 @@
       items:
         - name: ストレージ アカウント
           href: ../common/storage-account-overview.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
-        - name: Security
+        - name: セキュリティ
           items:
             - name: セキュリティに関する推奨事項
               href: security-recommendations.md
@@ -140,8 +140,6 @@
                   href: /rest/api/storageservices/authorize-with-shared-key
                 - name: Shared Access Signature (SAS) によるアクセスの委任
                   href: ../common/storage-sas-overview.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
-                - name: BLOB への匿名アクセス
-                  href: storage-manage-access-to-resources.md
             - name: 管理操作の承認
               href: ../common/authorization-resource-provider.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
             - name: 不変 BLOB
@@ -361,6 +359,14 @@
                       href: ../common/storage-account-sas-create-dotnet.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
                     - name: 保存されているアクセス ポリシーの定義
                       href: ../common/storage-stored-access-policy-define-dotnet.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
+                - name: BLOB データへの匿名読み取りアクセスを管理する
+                  items:
+                    - name: コンテナーと BLOB 用の匿名読み取りアクセスを構成する
+                      href: anonymous-read-access-configure.md
+                    - name: BLOB データへの匿名読み取りアクセスを禁止する
+                      href: anonymous-read-access-prevent.md
+                    - name: パブリック コンテナーと BLOB に匿名でアクセスする (.NET)
+                      href: anonymous-read-access-client.md
             - name: Azure Storage の暗号化の管理
               items:
                 - name: BLOB が暗号化されているかどうかの確認
@@ -379,6 +385,8 @@
                           href: ../common/storage-encryption-keys-cli.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
                 - name: 要求での暗号化キーの指定
                   href: storage-blob-customer-provided-key.md
+                - name: ストレージ アカウントのインフラストラクチャの暗号化を有効にする
+                  href: ../common/infrastructure-encryption-enable.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
             - name: クライアント側の暗号化の構成
               items:
                 - name: .NET
@@ -393,8 +401,12 @@
                   href: ../common/storage-require-secure-transfer.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
                 - name: ファイアウォールと仮想ネットワークの構成
                   href: ../common/storage-network-security.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
-                - name: トランスポート層セキュリティの有効化
-                  href: ../common/storage-security-tls.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
+                - name: トランスポート層セキュリティ (TLS) を構成する
+                  items:
+                    - name: ストレージ アカウントの最小 TLS バージョンを構成する
+                      href: ../common/transport-layer-security-configure-minimum-version.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
+                    - name: クライアント アプリケーションの TLS を構成する
+                      href: ../common/transport-layer-security-configure-client-version.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
             - name: 不変ポリシーの設定と管理
               href: storage-blob-immutability-policies-manage.md
         - name: データの冗長性を管理する
@@ -634,7 +646,7 @@
           href: data-lake-storage-best-practices.md
         - name: クエリの高速化
           href: data-lake-storage-query-acceleration.md
-        - name: Architecture
+        - name: アーキテクチャ
           items:
             - name: Hadoop 用 Azure BLOB ファイル システム ドライバー
               href: data-lake-storage-abfs-driver.md
@@ -642,7 +654,7 @@
               href: data-lake-storage-introduction-abfs-uri.md
             - name: 階層型名前空間について
               href: data-lake-storage-namespace.md
-        - name: Security
+        - name: セキュリティ
           items:
             - name: セキュリティに関する推奨事項
               href: security-recommendations.md
