--- a/articles/storage/files/TOC.yml
+++ b/articles/storage/files/TOC.yml
@@ -211,12 +211,18 @@
                   href: ../common/storage-encryption-keys-powershell.md?toc=%2fazure%2fstorage%2ffiles%2ftoc.json
                 - name: Azure CLI
                   href: ../common/storage-encryption-keys-cli.md?toc=%2fazure%2fstorage%2ffiles%2ftoc.json
+        - name: ストレージ アカウントのインフラストラクチャの暗号化を有効にする
+          href: ../common/infrastructure-encryption-enable.md?toc=%2fazure%2fstorage%2ffiless%2ftoc.json
         - name: ファイアウォールと仮想ネットワークの構成
           href: ../common/storage-network-security.md?toc=%2fazure%2fstorage%2ffiles%2ftoc.json
         - name: 安全な転送が必要
           href: ../common/storage-require-secure-transfer.md?toc=%2fazure%2fstorage%2ffiles%2ftoc.json
-        - name: Azure Storage クライアントのセキュリティで保護された TLS の有効化
-          href: ../common/storage-security-tls.md
+        - name: トランスポート層セキュリティ (TLS) を構成する
+          items:
+            - name: ストレージ アカウントの最小 TLS バージョンを構成する
+              href: ../common/transport-layer-security-configure-minimum-version.md?toc=%2fazure%2fstorage%2ffiles%2ftoc.json
+            - name: クライアント アプリケーションの TLS を構成する
+              href: ../common/transport-layer-security-configure-client-version.md?toc=%2fazure%2fstorage%2ffiles%2ftoc.json
     - name: 転送
       items:
         - name: 作業の開始 - AzCopy
