--- a/articles/data-factory/TOC.yml
+++ b/articles/data-factory/TOC.yml
@@ -270,6 +270,8 @@
           href: connector-db2.md
         - name: 区切りテキスト形式
           href: format-delimited-text.md
+        - name: 差分形式
+          href: format-delta.md
         - name: Drill
           href: connector-drill.md
         - name: Dynamics 365
@@ -727,6 +729,8 @@
           href: ssis-integration-runtime-management-troubleshoot.md
         - name: Azure-SSIS IR でのパッケージ実行
           href: ssis-integration-runtime-ssis-activity-faq.md
+        - name: Azure-SSIS IR での接続性の診断
+          href: ssis-integration-runtime-diagnose-connectivity-faq.md
 - name: リファレンス
   items:
     - name: データ フローのスクリプト
